# gmjni

./: README.md  build.sh  pom.xml
jni/: CMakeLists.txt  build.sh  clean.sh  common.c  image_Composite.c  image_DrawInfo.c  image_GmBase.c  image_Image.c  image_Image.h  image_ImageInfo.c  image_ImageProcessor.c  image_Resizer.c  image_Shear.c  image_Transformer.c  image_TypeMetric.c
jni/include/: common.h  image_Composite.h  image_DrawInfo.h  image_GmBase.h  image_Image.h  image_ImageInfo.h  image_ImageProcessor.h  image_Resizer.h  image_Shear.h  image_Transformer.h  image_TypeMetric.h
src/main/java/com/github/rolandhe/gm/: Composite.java  DrawInfo.java  FilterTypes.java  GmBase.java  GmEntity.java  GmExcetpion.java  Image.java  ImageInfo.java  ImageProcessor.java  Rect.java  Resizer.java  Shear.java  Transformer.java  TypeMetric.java
src/main/resources/lib/: libGmJni.dylib
src/test/java/com/github/rolandhe/: TestCase.java
